--- a/Public/css/Stil.css
+++ b/Public/css/Stil.css
@@ -7,6 +7,8 @@ nav{
     width: 150px;
     position: fixed;
     background-color: #e8e8e8;
+    cursor: default;
+    font-weight: bold;
 }
 
 nav > header{
@@ -28,10 +30,16 @@ nav > ul > li{
     width: 100%;
     padding: 5px;
     text-align: center;
+    cursor: pointer;
 }
 
 nav > ul > li:hover{
     background: #96939B;
+}
+
+ul > .danger:hover{
+    background-color: #FC814A;
+    color:white;
 }
 
 
@@ -51,6 +59,18 @@ nav > footer{
     padding: 20px;
 }
 
+.dodaj{
+    border: 0;
+    margin-bottom: 5px;
+    background-color: #FC814A;
+    border-radius: 5px;
+    color: white;
+    font-weight: bolder;
+    min-height: 60px;
+    min-width: 150px;
+    font-size: x-large;
+}
+
 th{
     background-color: #564256 !important;
     color: white !important;
@@ -67,6 +87,7 @@ td > button{
     background-color: #FC814A;
     border-radius: 5px;
     color: white;
+    width: 50px;
 }
 
 label{
