--- a/Public/css/Stil.css
+++ b/Public/css/Stil.css
@@ -109,6 +109,7 @@ label{
     margin: 0 !important;
     background-color: #564256;
     margin-right: 10px !important;
+    margin-bottom: 5px !important;
     color: white !important;
     font-weight: bold !important;
     border-radius: 5px;
@@ -152,3 +153,7 @@ input::placeholder{
     color: #dbd4d4 !important;
 }
 
+#login{
+    background-color: #FC814A;
+    color: white;
+}
