--- a/Public/css/Stil.css
+++ b/Public/css/Stil.css
@@ -120,7 +120,7 @@ td > button{
 }
 
 label{
-    width: 125px;
+    width: 125px !important;
     text-align: center !important;
     margin: 0 !important;
     background-color: #564256;
